--- a/tutorials/Introduction.ipynb
+++ b/tutorials/Introduction.ipynb
@@ -816,6 +816,12 @@
     "\n",
     "Please have a look at the [API documentation](https://nvlabs.github.io/sionna/rt/api/rt.html) of the various components and the other available [Tutorials](https://nvlabs.github.io/sionna/rt/tutorials.html) and [Developer Guides](https://nvlabs.github.io/sionna/rt/developer/developer.html)."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "49",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
@@ -825,7 +831,8 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "sionna-training",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
@@ -838,7 +845,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
